// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle > match disabled snapshot 1`] = `
<div>
  <div>
    <label
      class="flex gap-2 cursor-pointer items-top"
    >
      <input
        class="toggle focus:bg-none border-none bg-white hover:bg-white"
        data-testid="toggle"
        disabled=""
        type="checkbox"
      />
      <span
        class="label-text text-slate-700 text-sm font-medium flex flex-col gap-2"
      >
        Toggle Label
      </span>
    </label>
  </div>
</div>
`;

exports[`Toggle > match snapshot 1`] = `
<div>
  <div>
    <label
      class="flex gap-2 cursor-pointer items-top"
    >
      <input
        class="toggle focus:bg-none border-none bg-white hover:bg-white"
        data-testid="toggle"
        type="checkbox"
      />
      <span
        class="label-text text-slate-700 text-sm font-medium flex flex-col gap-2"
      >
        Toggle Label
      </span>
    </label>
  </div>
</div>
`;
